Updated OAuth2 for email deployment